# Homework-week-3

./: .env.sample  .gitignore  README.md  asgi.py  cli.py  docker-compose.yaml  erd.er  main.py  pyproject.toml  requirements.txt  settings.py
commands/init_database/: main.py
scripts/: export_erd.py  import_books_async.py
src/api/: books.py  debug.py  deps.py  main_router.py  rentals.py  users.py
src/api/hello_world/: main.py
src/models/: Books.py  RentalReq.py  Users.py  __init__.py  sample_models.py
src/schemas/: book_schema.py  rental_schema.py  user_schema.py
src/utils/: db_utils.py
test_data/: books.csv
